--- a/x360ce.App.Beta/Properties/Resources.resx
+++ b/x360ce.App.Beta/Properties/Resources.resx
@@ -325,4 +325,10 @@
   <data name="test_16x16" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Images\test_16x16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="save_ok_16x16" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\save_ok_16x16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="save_warning_16x16" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\save_warning_16x16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
