Fix general classes, Use "Settings" folder settings in order not to clash with v3 settings.

--- a/x360ce.App/Controls/GameSettingsUserControl.resx
+++ b/x360ce.App/Controls/GameSettingsUserControl.resx
@@ -162,4 +162,7 @@
   <metadata name="ExportSaveFileDialog.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>710, 9</value>
   </metadata>
+  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>126</value>
+  </metadata>
 </root>
