--- a/x360ce.App.Beta/Documents/ChangeLog.txt
+++ b/x360ce.App.Beta/Documents/ChangeLog.txt
@@ -1,8 +1,8 @@
 v4.11.12.0 (2020-07-25)
-- Fix: Inaccessible dialogs when Application is Always on Top.
-- Fix: Map Name dropdown combo box on PAD Control.
+- Fix: Inaccessible dialog when Application is Always on Top.
+- Fix: Map Name drop down combo box on PAD Control.
 - Update: "Auto" map feature maps buttons and axis on Sony controllers better now.
-- Update: "Auto" map feature recognize combined trigger axis better now.
+- Update: "Auto" map feature recognise combined trigger axis better now.
 
 v4.11.7.0 (2020-07-20)
 - Fix: Crash when device change.
