--- a/x360ce.App.Beta/Documents/ChangeLog.txt
+++ b/x360ce.App.Beta/Documents/ChangeLog.txt
@@ -25,7 +25,7 @@ v4.10.12.0 Alpha (2019-05-26)
 - Update: Code required to run X360CE as Windows Service (work in progress).
 
 v4.9.0.0 Alpha (2019-04-22)
-- New versio, which uses Virtual Gamepad Emulation driver ViGEmBus by nefarius.
+- New version, which uses Virtual Gamepad Emulation driver ViGEmBus by nefarius.
 
 v3.3.6.0 (2018-07-06)
 - Update: Shared libraries updated.
