--- a/x360ce.App.Beta/Documents/ChangeLog.txt
+++ b/x360ce.App.Beta/Documents/ChangeLog.txt
@@ -1,6 +1,6 @@
 v4.11.15.0 (2020-07-26)
-Fix: Missing Vendor, Product and Revision for some devices.
-Fix: XInput value jittering between 0 and -1 when DeadZone is set.
+- Fix: Missing Vendor, Product and Revision for some devices.
+- Fix: XInput value jittering between 0 and -1 when DeadZone is set.
 
 v4.11.13.0 (2020-07-25)
 - Fix: Inaccessible dialog when Application is Always on Top.
